--- a/package.json
+++ b/package.json
@@ -4,14 +4,9 @@
   "description": "Project for MERN Stack - The Complete Guide",
   "main": "index.js",
   "scripts": {
-    // "seed": "node scripts/seedDB.js",
-    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start:prod": "node server.js",
-    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
-    "client": "cd client && npm run start",
-    "install": "cd client && npm install",
-    "build": "cd client && npm run build",
-    "heroku-postbuild": "npm run build"
+    "dev": "next",
+    "build": "next build",
+    "start": "next start -p $PORT"
   },
   "keywords": [],
   "author": "",
